# captainsengine

./: .c4droid  .travis.yml  CMakeLists.txt  FindFBX.cmake  README.md  build_wince.cmd  build_windows.cmd
Adventure/Editor/: CMakeLists.txt  configure_update.cmake.in  update.xml.in
AdventureGui/: AdventureCore.cpp  AdventureCore.h  CMakeLists.txt  SQL.cpp  SQL.h  engine.ini  main.cpp  main.h
Compiler/: CMakeLists.txt  CallNoASM.cpp  ClassLoader.cpp  ClassLoader.h  Compiler.cpp  Interpreter.cpp  Interpreter.h  JVM.cpp  JVM.h  JavaBinFileReader.cpp  JavaBinFileReader.h  JavaDefs.cpp  JavaDefs.h  JavaOpcodes.h  MethodArea.cpp  MethodArea.h  Preproc.h  Trace.h  VMArray.cpp  VMArray.h  VMContext.cpp  VMContext.h  VMLoader.cpp  VMLoader.h  VMMethod.cpp  VMMethod.h  VMObject.cpp  VMObject.h  VMclass.cpp  VMclass.h  jni.cpp  jni.h
Compiler/runtime/: Java_io.cpp  Runtime.cpp  Runtime.h
Compiler/test/: Test.java  Test2.java  compile.bat  run.bat
Compiler/zip/: zip.cpp
Engine/: CMakeLists.txt  Engine.sln  Engine.vcproj  Makefile  configure.ac  engine.ini  main.cpp
Engine/common/: CMakeLists.txt  OctreeStatic.h  RefCountedObject.h  graph.cpp  graph.h  octree.h
Engine/gui/: CMakeLists.txt  console.cpp  console.h  dialog.cpp  dialog.h  dropdown.cpp  dropdown.h  filedialog.cpp  filedialog.h  gui.cpp  gui.h  listbox.cpp  listbox.h  messagebox.cpp  messagebox.h
Engine/image/: CMakeLists.txt  image.cpp  image.h  loader.cpp  loader.h
Engine/input/: CMakeLists.txt  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
Engine/io/: BinFileReader.cpp  BinFileReader.h  CMakeLists.txt  GZipReader.cpp  MemReader.cpp  MemReader.h  MemWriter.cpp  MemWriter.h  Reader.h  TraceManager.cpp  TraceManager.h  Tracing.cpp  Tracing.h  Writer.h  ZipReader.cpp  ZipReader.h  ZipWriter.cpp  eventqueue.h
Engine/lib/: jpeg.lib  liblua.lib  liblualib.lib
Engine/math/: CMakeLists.txt  arcball.cpp  arcball.h  bbox.cpp  bbox.h  boundingobject.h  bsphere.cpp  bsphere.h  frustum.cpp  frustum.h  matrix.cpp  matrix.h  plane.cpp  plane.h  ray.cpp  ray.h  vector.cpp  vector.h
Engine/mesh/: CMakeLists.txt  SimpleMesh.cpp  SimpleMesh.h  mesh.cpp  mesh.h  model.cpp  model.h  triangle.cpp  triangle.h
Engine/physics/: Body.cpp  Body.h  CMakeLists.txt  CollisionBase.h  CollisionBody.cpp  CollisionBody.h  CollisionHeightfield.cpp  CollisionHeightfield.h  CollisionObject.cpp  CollisionObject.h  CollisionPlane.cpp  CollisionPlane.h  CollisionSpace.cpp  CollisionSpace.h  Hinge2Joint.cpp  Hinge2Joint.h  Joint.cpp  Joint.h  Simulator.cpp  Simulator.h
Engine/renderer/: CMakeLists.txt  DXrenderer.cpp  DXrenderer.h  DXtexture.cpp  DXtexture.h  DXvertexbuffer.cpp  DXvertexbuffer.h  OGLrenderer.cpp  OGLrenderer.h  OGLtexture.cpp  OGLtexture.h  OGLvertexbuffer.cpp  OGLvertexbuffer.h  camera.cpp  camera.h  dummyrenderer.h  font.cpp  font.h  forms.cpp  forms.h  indexbuffer.cpp  indexbuffer.h  light.cpp  light.h  material.cpp  material.h  model.cpp  model.h  renderer.cpp  renderer.h  rendertarget.cpp  rendertarget.h  scene.cpp  scene.h  scenenode.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexbuffer.cpp  (+1 more)
Engine/renderpass/: CMakeLists.txt  Forward.cpp  Forward.h  LightPrepass.cpp  LightPrepass.h  Technique.cpp  Technique.h
Engine/system/: AtomicCounter.cpp  AtomicCounter.h  CMakeLists.txt  allocation.h  bitset.cpp  bitset.h  cefunctions.cpp  clientsocket.cpp  clientsocket.h  engine.cpp  engine.h  engineMain.cpp  event.cpp  event.h  file.cpp  file.h  gameobject.cpp  gameobject.h  process.cpp  process.h  script.cpp  script.h  serversocket.cpp  serversocket.h  singleton.h  socket.cpp  socket.h  soloader.cpp  soloader.h  thread.cpp  thread.h  types.h  utilities.cpp  utilities.h  winceMain.h
Engine/util/: CMakeLists.txt  activeobject.cpp  activeobject.h
Engine/window/: CMakeLists.txt  nativeAndroid.cpp  nativeAndroid.h  nativeLinux.cpp  nativeLinux.h  nativeQNX.cpp  nativeQNX.h  nativeWindows.cpp  nativeWindows.h  splashwindow.cpp  splashwindow.h  window.cpp  window.h
OSMRacer/: CMakeLists.txt  FollowCam.cpp  FollowCam.h  GameObject.h  GeoCache.cpp  GeoCache.h  GeoGen.cpp  GeoGen.h  MapChunk.cpp  MapChunk.h  MapInfo.h  OSMMapAdapter.cpp  OSMMapAdapter.h  OSMReader.cpp  OSMReader.h  Renderable.h  SimpleMapAdapter.cpp  SimpleMapAdapter.h  StreetGenerator.cpp  StreetGenerator.h  Terrain.cpp  Terrain.h  TerrainChunk.cpp  TerrainChunk.h  Utilities.cpp  Utilities.h  Vehicle.cpp  Vehicle.h  engine.ini  main.cpp  map2.osm
OSMRacer/testmaps/: crossing.map
editor/: CMakeLists.txt  Makefile  camera.cpp  camera.h  editor.cpp  editor.h  editor.vcproj  engine.ini  graphics.cpp  graphics.h  hqmExport.cpp  hqmExport.h  main.cpp  menu.cpp  menu.h
heroquest/HQClient/: CMakeLists.txt  HQClient.vcproj  Makefile  TODO  bitset.cpp  camera.cpp  camera.h  common.cpp  common.h  console.cpp  console.h  creature.cpp  creature.h  door.cpp  door.h  editor.cmd  engine.ini  field.cpp  field.h  furniture.cpp  furniture.h  gamestate.cpp  gamestate.h  gui.cpp  gui.h  hero.cpp  hero.h  inventory.cpp  inventory.h  item.cpp  item.h  main.cpp  math.cpp  math.h  menu.cpp  menu.h  message.cpp  message.h  monster.cpp  opcodes.h  (+19 more)
heroquest/HQEditor/: CMakeLists.txt  HQEditor.vcproj  Makefile  SCRIPT.txt  compiler.cpp  compiler.h  copy  engine.ini  levels  main.cpp  make.bat  make_devel.cmd
heroquest/HQServer/: CMakeLists.txt  HQServer.vcproj  Makefile  admin.h  engine.ini  gamestate.cpp  gamestate.h  main.cpp  message.cpp  player.cpp  player.h  serversocket.h  start_devel.bat
playground/BotWars/: CMakeLists.txt  main.cpp
playground/GraDbg/: CMakeLists.txt  GraDbg.def  egl.cpp  egl_run.cpp  egl_run.h  ogl.cpp  util.cpp  util.h  util_run.cpp  util_run.h
trunk/Compiler/: CMakeLists.txt  CallNoASM.cpp  ClassLoader.cpp  ClassLoader.h  Compiler.cpp  Interpreter.cpp  Interpreter.h  JVM.cpp  JVM.h  JavaBinFileReader.cpp  JavaBinFileReader.h  JavaDefs.cpp  JavaDefs.h  JavaOpcodes.h  MethodArea.cpp  MethodArea.h  Preproc.h  Trace.h  VMArray.cpp  VMArray.h  VMContext.cpp  VMContext.h  VMLoader.cpp  VMLoader.h  VMMethod.cpp  VMMethod.h  VMObject.cpp  VMObject.h  (+4 more)
(+1569 files in other folders)
